--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
                             <h2>SOBRE MIM</h2>
                             <div class="entalhe"></div>
                             <p> Meu nome é Marco Aguiar. Sou natural de Campinas, mas atualmente resido em São Paulo.
-                                Atualmente tenho 20 anos e estou no 4º semestre do curso de Engenharia da Computação na Faculdade Impacta de Tecnologia. </br></br>
-                                Recentemente, concluí um treinamento de <i> SAP Business Tecnology Plataform </i>
-                                (SAP BTP) lecionado pela <i>Lab4Extensions</i> e estou estudando as linguagens de programação PHP e 
-                                JavaScript na plataforma B7Web.
+                                Tenho 20 anos e estou no 4º semestre do curso de Engenharia da Computação na Faculdade Impacta de Tecnologia. </br></br>
+                                Recentemente, iniciei um treinamento de <i> AWS Academy Cloud Foundation </i>
+                                lecionado pela <i>Amazon</i>.
                             </p>
 
                             <a target="_blank" href="assets/archives/Currículo.pdf"> Meu currículo </a>
