--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </main>
         <footer>
             <div class="container footer">
-                <p>Todos os direitos reservados.</p>
+                <p>Todos os direitos reservados</p>
             </div>
         </footer>
     </body>
