Revert "Updating title"
This reverts commit a6c586d7875dbd14ca6c96fda58625e3795abbf1.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="UTF-8"/>
-        <title>Portfolio - Marco Aguiar</title>
+        <title>Portfolio - MA</title>
         <meta name="viewport" content="width=device-width, user-scalable=0"/>
         
         <link rel="shortcut icon" href="assets/archives/logo.png">
