Revert "Changing Style"
This reverts commit 8f60c2017412bef6443d4a61e5eb23dbc15dbe09.

--- a/index.html
+++ b/index.html
@@ -51,61 +51,48 @@
                     <div class="sobreupper">
                         <div class="left">
                             <h2>SOBRE MIM</h2>
-                            <div class="entalhe-sobre"></div>
-                            <p> Meu nome é Marco Aguiar. Tenho 20 anos e atualmente resido em São Paulo.
-                                Estou cursando o 4º semestre do curso de Engenharia da Computação na <a href="https://impacta.edu.br" class="faculdade">Faculdade Impacta de Tecnologia</a>.</br></br>
+                            <div class="entalhe"></div>
+                            <p> Meu nome é Marco Aguiar. Sou natural de Campinas, mas atualmente resido em São Paulo.
+                                Tenho 20 anos e estou no 4º semestre do curso de Engenharia da Computação na Faculdade Impacta de Tecnologia. </br></br>
                                 Recentemente, iniciei um treinamento de <i> AWS Academy Cloud Foundation </i>
                                 lecionado pela <i>Amazon</i>.
                             </p>
 
-                            <a target="_blank" class="botoes" href="assets/archives/Currículo.pdf"> Meu currículo </a>
+                            <a target="_blank" href="assets/archives/Currículo.pdf"> Meu currículo </a>
                         </div>
                         <div class="right">
-                          <div class="imgsobre"></div>
+                            <h2>Linguagens de programação</h2>
+                            <h4>que já tive contato</h4> 
+                            <div class="entalhe"></div>
+                            <ul>    
+                                <li>Java</li>
+                                <li>JavaScript</li>
+                                <li>Python</li>
+                                <li>Kotlin</li>
+                            </ul>
                         </div>
                     </div>
+                    <div class="sobrelower">
+                            <div class="lang">
+                                <img src="assets/archives/ptbr.jpg" height="50px">
+                                <h2>Fluente</h2>
+                            </div>
+                            <div class="lang">
+                                <img src="assets/archives/ingles.jpg" height="50px">
+                                <h2>Intermediário</h2>
+                            </div>
+                            <div class="lang">
+                                <img src="assets/archives/espanhol.png" height="50px">
+                                <h2>Básico</h2>
+                            </div>
+                    </div>
                 </div>
-            </section>
-            <section>
-              <div class="left conhecimentos">
-                <h2>Conhecimentos</h2>
-                <div class="entalhe-conhecimentos"></div>
-            <div class="sobrelower">
-              <div class="lang">
-                <h1 class="titulo-linguagens">Linguagens:</h1>
-                <ul>
-                  <li class="linguagens">• Java</li>
-                  <li class="linguagens">• JavaScript</li>
-                  <li class="linguagens">• Python</li>
-                  <li class="linguagens">• Kotlin</li>
-                </ul>
-              </div>
-              <div class="lang">
-                <h1 class="titulo-frameworks">Frameworks:</h1>
-                <ul>
-                  <li class="linguagens">• SpringBoot</li>
-                  <li class="linguagens">• Bootstrap</li>
-                  <li class="linguagens">• GitHub</li>
-                  <li class="linguagens">• NodeJs</li>
-                  <li class="linguagens">• VueJs</li>
-                  <li class="linguagens">• Django</li>
-                </ul>
-              </div>
-              <div class="lang">
-                <h1 class="titulo-banco">Banco de dados:</h1>
-                <ul>
-                  <li class="linguagens">• SQL Server</li>
-                  <li class="linguagens">• MYSQL</li>
-                  <li class="linguagens">• Oracle</li>
-                </ul>
-              </div>
-      </div>
             </section>
             <section>
                 <div class="container projetos" id="projetos">
                     <div class="upper">
                         <h2>PROJETOS</h2>
-                        <div class="entalhe-projetos"></div>
+                        <div class="entalhe"></div>
                     </div>
                     <div class="lower">
                         <div class="item-projetos">
@@ -119,7 +106,7 @@
                                     conjunto com os outros participantes o Back-End.
                                 </p> -->
                             </div>
-                            <div class="botoes">
+                            <div class="botoes one">
                                 <a target="_blank"> GitHub </a>
                             </div>
                         </div>
@@ -159,15 +146,15 @@
                 <div class="container contato" id="contato">
                     <div class="upper">
                         <h2>CONTATO</h2>
-                        <div class="entalhe-contato"></div>
+                        <div class="entalhe"></div>
                     </div>
                     <div class="contatolower">
                         <div class="left">
                             <ul>
                                 <li> <img src="assets/archives/tel.svg" height="30px"> <p>+55 (11) 95323-3637</p></li>
                                 <li> <img src="assets/archives/mail.svg"  height="30px"> <p>marcoaguiar14@gmail.com</p></li>
-                                <li class="links"><img src="assets/archives/github.svg"  height="30px"> <a href="https://github.com/Marco-Aguiar"> https://github.com/Marco-Aguiar</a></li>
-                                <li class="links"><img src="assets/archives/linkedin.svg"  height="30px"> <a href="https://www.linkedin.com/in/marco-aguiar-sp/"> https://www.linkedin.com/in/marco-aguiar-sp/</a></li>
+                                <li> <img src="assets/archives/github.svg"  height="30px"> <a href="https://github.com/Marco-Aguiar"> https://github.com/Marco-Aguiar</a></li>
+                                <li> <img src="assets/archives/linkedin.svg"  height="30px"> <a href="https://www.linkedin.com/in/marco-aguiar-sp/"> https://www.linkedin.com/in/marco-aguiar-sp/</a></li>
                             </ul>
                         </div>
                         <div class="right-img">
