--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <body>
         <header>
-            <div class="container header">
-                <div class="menu col-xl-12"> 
-                    <ul>
+            <div class="container header col-xl-12">
+                <div class="menu"> 
+                    <ul class="cor-header">
                         <li><a class="menu-header" href="#home"> <img src="assets/archives/home.png" height="20px"> HOME </a></li>
                         <li><a class="menu-header" href="#sobre"> <img src="assets/archives/sobre.png"  height="20px"> SOBRE </a></li>
                         <li><a class="menu-header" href="#projetos"> <img src="assets/archives/projetos.png"  height="20px"> PROJETOS </a></li>
@@ -54,7 +54,7 @@
                             <h2>SOBRE MIM</h2>
                             <div class="entalhe"></div>
                             <p> Meu nome é Marco Aguiar. Sou natural de Campinas, mas atualmente resido em São Paulo.
-                                Tenho 20 anos e estou no 4º semestre do curso de Engenharia da Computação na Faculdade Impacta de Tecnologia. </br></br>
+                                Tenho 20 anos e estou no 4º semestre do curso de Engenharia da Computação na Faculdade Impacta de Tecnologia.</br></br>
                                 Recentemente, iniciei um treinamento de <i> AWS Academy Cloud Foundation </i>
                                 lecionado pela <i>Amazon</i>.
                             </p>
