projetos em andamento

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                     </div>
                     <div class="lower">
                         <div class="item-projetos">
-                            <h2> Em aberto </h2>
+                            <h2> Em andamento </h2>
                             <div class="entalhe"> </div>
-                            <!-- <img class="imgprin" src="assets/archives/sgac.png" width="350px"> -->
+                            <img class="imgprin" src="assets/archives/projeto.jpeg" width="350px">
                             <div class="texto">
                                 <!-- <p>SGAC é um sistema de gerenciamento de artigos acadêmicos que está sendo 
                                     realizado com intuito de auxiliar a Fatec Ourinhos. </br></br>
@@ -123,9 +123,9 @@
                             </div>
                         </div>
                         <div class="item-projetos">
-                            <h2>Em aberto</h2>
+                            <h2>Em andamento</h2>
                             <div class="entalhe"> </div>
-                            <!-- <img class="imgprin" src="assets/archives/micangasbyliv.png" width="350px"> -->
+                            <img class="imgprin" src="assets/archives/projeto.jpeg" width="350px">
                             <div class="texto">
                                 <!-- <p>Miçangas By Liv é um catálogo estático feito para uma loja online de 
                                     miçangas </br></br>
@@ -170,7 +170,7 @@
                             </ul>
                         </div>
                         <div class="right-img">
-                            <img src="assets/archives/Img-portfolio.png">
+                            <img src="assets/archives/contactUs.jpg">
                         </div>
                     </div>
                 </div>
