--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 <li class="espaçamento">• Bootstrap</li>
                                 <li class="espaçamento">• GitHub</li>
                                 <li class="espaçamento">• VueJs</li>
+				<li class="espaçamento">• Docker</li>
                             </ul>
                         
                       </div>
