--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="container">
                     <div class="row col-xl-12">
                       <div class="col-xl-4">
-                        <p id="titulo-linguagem">Linguagens</p>
+                        <p id="titulo-linguagem">Linguagens:</p>
                         <ul class="alinhamento">
                             <li class="espaçamento">• Java</li>
                             <li class="espaçamento">• Python</li>
@@ -80,18 +80,19 @@
                         </ul>
                       </div>
                       <div class="col-xl-4">
-                        <p id="titulo-frame">Frameworks:</p>
+                        <p id="titulo-frame">Ferramentas:</p>
                             <ul class="alinhamento">
                                 <li class="espaçamento">• SpringBoot</li>
                                 <li class="espaçamento">• Bootstrap</li>
                                 <li class="espaçamento">• GitHub</li>
                                 <li class="espaçamento">• VueJs</li>
-				<li class="espaçamento">• Docker</li>
+				                <li class="espaçamento">• Docker</li>
+				                <li class="espaçamento">• Kubernetes</li>
                             </ul>
                         
                       </div>
                       <div class="col-xl-4">
-                        <p id="titulo-banco">Banco de Dados</p>
+                        <p id="titulo-banco">Banco de Dados:</p>
                             <ul class="alinhamento">
                                 <li class="espaçamento">• SQL Server</li>
                                 <li class="espaçamento">• MYSQL</li>
