--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">4</span>
+              <span data-toggle="counter-up">5</span>
               <p>Projetos</p>
             </div>
           </div>
@@ -459,7 +459,7 @@
               
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
+                <h4>Celular:</h4>
                 <p>(11) 9 5323-3637</p>
               </div>
          
