--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Nome:</strong> Marco Aguiar</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Profissão:</strong> Programador</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Cidade:</strong> São Paulo</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Ensino Superior:</strong> Bacharel em tecnologia</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Curso:</strong> Engenharia da computação</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Ensino Superior:</strong> Engenharia da computação</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> marcoaguiar14@gmail.com</li> 
                 </ul>
               </div>
@@ -397,7 +396,7 @@
         <div class="owl-carousel testimonials-carousel" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/Faiza.jpeg" class="testimonial-img" alt="">
+            <a href="https://www.linkedin.com/in/bertrandmatsubara/"><img src="assets/img/testimonials/Faiza.jpeg" class="testimonial-img" alt=""></a>
             <h3>Bertrand Matsubara</h3>
             <h4>Senior Manager</h4>
             <p>
@@ -408,7 +407,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/Avinashjpeg.jpeg" class="testimonial-img" alt="">
+            <a href="https://www.linkedin.com/in/anadavid/"><img src="assets/img/testimonials/Avinashjpeg.jpeg" class="testimonial-img" alt=""></a>
             <h3>Ana David</h3>
             <h4> Partner Enablement Manager</h4>
             <p>
@@ -419,7 +418,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/Aman.jpeg" class="testimonial-img" alt="">
+            <a href="https://www.linkedin.com/in/fábio-jesus-moreira-de-almeida-72b707158/"><img src="assets/img/testimonials/Aman.jpeg" class="testimonial-img" alt=""></a>
             <h3>Fabio Moreira</h3>
             <h4>Physicist</h4>
             <p>
