--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
             <div class="progress">
               <span class="skill">HTML <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">CSS <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -151,23 +151,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Python <i class="val"></i></span>
+              <span class="skill">Java <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Java <i class="val"></i></span>
+              <span class="skill">Python <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
  
             <div class="progress">
               <span class="skill">Kotlin <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -310,7 +310,7 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Front-end-development</a></h4>
-              <p>Successfully completed  Front-end-development course offered through priple.com</p>
+              <p>Curso finalizado envolvendo noções de HTML, CSS e Javascript</p>
             </div>
           </div>
 
@@ -322,8 +322,8 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Html,CSS,Javascript for Web Developers</a></h4>
-              <p>Successfully completed Html, CSS , Javascript for Web Developers course from Coursera </p>
+              <h4><a href="">Back-end Java</a></h4>
+              <p>Curso finalizado envolvendo noções de Java </p>
             </div>
           </div>
 
@@ -335,8 +335,8 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Programming in C & C++</a></h4>
-              <p>Successfully completed 6 weeks Training on Programming in C & C++ from ICT Academy (IIT Kanpur).</p>
+              <h4><a href="">Maven</a></h4>
+              <p>Curso finalizado envolvendo noções de gerenciamento de dependências e build de aplicações Java.</p>
             </div>
           </div>
 
@@ -348,8 +348,8 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Python Bootcamp 2020</a></h4>
-              <p>Successfully completed Python Bootcamp 2020 online course from udemy.</p>
+              <h4><a href="">Springboot API REST & Spring MVC</a></h4>
+              <p>Curso finalizado envolvendo noções do framework Springboot com uma API REST.</p>
             </div>
           </div>
 
@@ -361,8 +361,8 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Award of Excellence</a></h4>
-              <p>Secured First position in paper presentation in webinar on E-Governace for National Development organized by CSI Student Branch.</p>
+              <h4><a href="">Oracle & SQL Database</a></h4>
+              <p>Curso finalizado envolvendo noções gerais de banco de dados.</p>
             </div>
           </div>
 
@@ -374,8 +374,8 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Award of Excellence</a></h4>
-              <p>Secured 2nd Position In Powerpoint presentation and Poster Making in National Seminar based on Recent Advancement in Wireless Communication.</p>
+              <h4><a href="">Docker</a></h4>
+              <p>Curso finalizado envolvendo noções de gerenciamento de containers em aplicações back-end e front-end</p>
             </div>
            
           </div>
