--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Back-end Java</a></h4>
-              <p>Curso finalizado envolvendo noções de Java </p>
+              <p>Curso finalizado com o foco em aprendizado Java, do início ao intermediário.</p>
             </div>
           </div>
 
