--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,7 +57,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-    <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Background.1jpeg.jpeg)">
+    <div id="home" class="intro route bg-image">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Marco Aguiar</h1>
       <p>   <span class="typed" data-typed-items="Intern, Back-end-Developer, Programmer"></span></p>
@@ -396,7 +395,7 @@
         <div class="owl-carousel testimonials-carousel" data-aos="zoom-in" data-aos-delay="100">
 
           <div class="testimonial-item">
-            <a href="https://www.linkedin.com/in/bertrandmatsubara/"><img src="assets/img/testimonials/Faiza.jpeg" class="testimonial-img" alt=""></a>
+            <a href="https://www.linkedin.com/in/bertrandmatsubara/"><img src="assets/img/testimonials/bertrand.jpeg" class="testimonial-img" alt=""></a>
             <h3>Bertrand Matsubara</h3>
             <h4>Senior Manager</h4>
             <p>
@@ -407,7 +406,7 @@
           </div>
 
           <div class="testimonial-item">
-            <a href="https://www.linkedin.com/in/anadavid/"><img src="assets/img/testimonials/Avinashjpeg.jpeg" class="testimonial-img" alt=""></a>
+            <a href="https://www.linkedin.com/in/anadavid/"><img src="assets/img/testimonials/cris.jpeg" class="testimonial-img" alt=""></a>
             <h3>Ana David</h3>
             <h4> Partner Enablement Manager</h4>
             <p>
@@ -418,7 +417,7 @@
           </div>
 
           <div class="testimonial-item">
-            <a href="https://www.linkedin.com/in/fábio-jesus-moreira-de-almeida-72b707158/"><img src="assets/img/testimonials/Aman.jpeg" class="testimonial-img" alt=""></a>
+            <a href="https://www.linkedin.com/in/fábio-jesus-moreira-de-almeida-72b707158/"><img src="assets/img/testimonials/fabin.jpeg" class="testimonial-img" alt=""></a>
             <h3>Fabio Moreira</h3>
             <h4>Physicist</h4>
             <p>
