--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About Me</span></a></li>
-        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Skills</span></a></li>
-        <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Check My Resume</span></a></li>
+        <li><a href="#skills"><i class="bx bx-file-blank"></i> <span>Skills</span></a></li>
+        <li><a href="#resumo"><i class="bx bx-book-content"></i> <span>Check My Resume</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Certification</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
       </ul>
@@ -117,7 +117,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>    
+          <h2 id="skills">Skills</h2>    
         </div>
 
         <div class="row skills-content">
@@ -225,7 +225,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2> Resumo</h2>
+          <h2 id="resumo"> Resumo</h2>
           
         </div>
 
