--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="home" class="intro route bg-image">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Marco Aguiar</h1>
-      <p>   <span class="typed" data-typed-items="Intern, Back-end-Developer, Programmer"></span></p>
+      <p>   <span class="typed" data-typed-items="Full-Stack Developer, Programmer, Software Engineer"></span></p>
       <div class="social-links">
         <a href="https://github.com/Marco-Aguiar" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/aguilarco10/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -87,7 +87,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             
             <p class="font-italic">
-             Sou estágiario back-end, atualmente desenvolvendo projetos em Java.
+             Sou desenvolvedor Full-Stack, atualmente desenvolvendo projetos em Java com aplicação em Angular e VueJs.
              Comecei a estudar programação em 2019 e desde então estou até os dias atuais.</p>
             <p> Recentemente, iniciei um treinamento de <b>AWS Academy Cloud Foundation</b> lecionado pela Amazon.</p>
             <div class="row">
@@ -159,14 +159,14 @@
             <div class="progress">
               <span class="skill">Python <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
  
             <div class="progress">
               <span class="skill">Kotlin <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
