--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="home" class="intro route bg-image">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Marco Aguiar</h1>
-      <p>   <span class="typed" data-typed-items="Full-Stack Developer, Programmer, Software Engineer"></span></p>
+      <p>   <span class="typed" data-typed-items="Full-Stack Developer, Software Engineer"></span></p>
       <div class="social-links">
         <a href="https://github.com/Marco-Aguiar" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/aguilarco10/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -210,7 +210,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">5</span>
+              <span data-toggle="counter-up">6</span>
               <p>Projetos</p>
             </div>
           </div>
