Criando um botao no home

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+        <li><a id="sobremim" href="#about"><i class="bx bx-user"></i> <span>About Me</span></a></li>
         <li><a href="#skills"><i class="bx bx-file-blank"></i> <span>Skills</span></a></li>
         <li><a href="#resumo"><i class="bx bx-book-content"></i> <span>Check My Resume</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Certification</span></a></li>
@@ -73,6 +73,14 @@
         <a href="https://github.com/Marco-Aguiar" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/aguilarco10/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/marco-aguiar-sp/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+        <div class="flip" id="card">
+          <div class="face" id="front">
+              Saiba mais
+          </div>
+          <div class="face" id="back">
+              Vamos lá!
+          </div>
       </div>
     </div>
   </section><!-- End Hero -->
