--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
         <div class="flip" id="card">
           <div class="face" id="front">
-              Saiba mais
+              Clique aqui
           </div>
           <div class="face" id="back">
               Vamos lá!
