--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
     })(window, document, "clarity", "script", "dybi3qpjkd");
-</script>
+  </script>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYKJ3XRKN9"></script>
@@ -117,7 +117,7 @@
             <p class="font-italic">
               Sou desenvolvedor Full-Stack, atualmente desenvolvendo projetos em Java com aplicação em Angular e VueJs.
               Comecei a estudar programação em 2019 e desde então estou até os dias atuais.</p>
-            <p> Recentemente, iniciei um treinamento de <b>AWS Academy Cloud Foundation</b> lecionado pela Amazon.</p>
+            <p> Recentemente, finalizei um curso de <b>AWS Academy Cloud Foundation</b> lecionado pela <b>Amazon</b>.<br> E, em sequência iniciei um curso focado em <b>React</b> pela plataforma <b>Rocketseat</b>.</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -156,7 +156,7 @@
             <div class="progress">
               <span class="skill">HTML <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -172,7 +172,7 @@
             <div class="progress">
               <span class="skill">JavaScript <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -184,15 +184,15 @@
             <div class="progress">
               <span class="skill">Java <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val"></i></span>
+              <span class="skill">React <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -200,7 +200,7 @@
             <div class="progress">
               <span class="skill">Kotlin <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -317,7 +317,7 @@
                   próximas formações</li>
                 <li>Neste projeto consegui me aprofundar em VueJs, NodeJs, Springboot e colocar em prática os conteúdos
                   aprendidos durante a formação</li>
-                <li>Além disso, participei de outros projetos envolvendo servlets</li>
+                <li>Além disso, participei de outros projetos envolvendo servlets e AngularJs</li>
               </ul>
             </div>
           </div>
@@ -502,6 +502,25 @@
           <h2>Entre em contato!</h2>
         </div>
 
+
+        <div>
+        <form action="https://formspree.io/f/xqkjlvdr" method="POST">
+          <h4 class=" mb-3 email">Email:</h4>
+          <div>
+            <input class="inputsEmail" type="email" name="email">
+          </div>
+            <h4 class="mt-3 mb-3 mensagem">Mensagem:</h4>
+            <div>
+              <textarea id="textarea" class="inputsEmail" name="message"></textarea>
+            </div>
+            <div>
+              <button class="mt-3 mb-5 botaoEmail" type="submit">Enviar</button>
+            </div>
+        </form>
+        </div>
+
+
+
         <div class="row mt-1">
 
           <div class="col-lg-12">
@@ -548,10 +567,6 @@
         &copy; Copyright. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
       </div>
     </div>
   </footer><!-- End Footer -->
