--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -118,7 +119,8 @@
               Comecei a estudar programação em 2019 e desde então estou até os dias atuais.</p>
             <p> Recentemente, finalizei um curso de <b>AWS Academy Cloud Foundation</b> lecionado pela
               <b>Amazon</b>.<br> E, em sequência iniciei um curso focado em <b>React</b> pela plataforma
-              <b>Rocketseat</b>.</p>
+              <b>Rocketseat</b>.
+            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -516,8 +518,10 @@
             </div>
             <div>
               <button id="botaoSend" class="botaoEmail">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
-                  <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
                 </svg>
                 <div class="wrapper">
                   <i class="bi bi-send"></i>
@@ -553,11 +557,39 @@
               </div>
 
             </div>
-
           </div>
 
         </div>
-
+        <div class="contenedor mt-4" id="redes">
+          <div class="boton">
+            <div class="icono">
+              <a href="https://www.facebook.com/marco.aguiar.3591/"><i class="fa fa-facebook"></i></a>
+            </div>
+            <span>Facebook</span>
+          </div>
+          <div class="boton">
+            <div class="icono">
+              <a href="https://wa.me/5511953233637?text=Olá%20Marco!%20Tudo%20bem?"><i class="fa fa-whatsapp"></i></a>
+            </div>
+            <span>Whatsapp</span>
+          </div>
+          <div class="boton">
+            <div class="icono">
+              <a href="https://www.linkedin.com/in/marco-aguiar-sp/"><i class="fa fa-linkedin"></i></a>
+            </div>
+            <span>Linkedin</span>
+          </div>
+          <div class="boton">
+            <div class="icono">
+              <a href="https://github.com/Marco-Aguiar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                viewBox="0 0 16 16">
+                <path
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+              </svg></a>
+            </div>
+            <span>Github</span>
+          </div>
+        </div>
       </div>
     </section><!-- End Contact Section -->
 
@@ -566,12 +598,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="social-links">
-        <a href="https://github.com/Marco-Aguiar" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.instagram.com/aguilarco10/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/marco-aguiar-sp/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-
-      </div>
       <div class="copyright">
         &copy; Copyright. All Rights Reserved
       </div>
