--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <h3 class="resume-title">Formação</h3>
             <div class="resume-item">
               <h4>Engenharia da Computação</h4>
-              <h5>2021 - 2025</h5>
+              <h5>2021 - 2024</h5>
               <p><em>Faculdade Impacta de Tecnologia - ZN</em></p>
             </div>
             <div class="resume-item">
@@ -312,16 +312,22 @@
             </div>
             <div class="resume-item">
               <h4>Estágiario Desenvolvedor Back-end</h4>
-              <h5>Julho 2021 - Presente</h5>
+              <h5>Julho 2021 - Dezembro 2022</h5>
               <p><em>Online </em></p>
               <ul>
-                <li>Iniciei como estagiário no primeiro programa de formação Java na empresa SIS Consultoria.</li>
                 <li>Como primeira tarefa prática, desenvolvi um sistema a fim de facilitar o gerenciamento sobre as
                   próximas formações</li>
                 <li>Neste projeto consegui me aprofundar em VueJs, NodeJs, Springboot e colocar em prática os conteúdos
                   aprendidos durante a formação</li>
                 <li>Além disso, participei de outros projetos envolvendo servlets e AngularJs</li>
               </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Trainee Desenvolvedor Back-end</h4>
+              <h5 id="atual">Cargo Atual</h5>
+              <br>
+              <h5>Dezembro 2022 - Presente</h5>
+              <p><em>Online </em></p>
             </div>
           </div>
         </div>
