--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
           <h2>Sobre mim</h2>
           <p> </p>
         </div>
-
         <div class="row">
           <div class="col-lg-4">
             <img src="assets/img/perfil.png" class="img-fluid" alt="">
@@ -195,7 +194,7 @@
 
       </div>
     </section>
-    
+
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
@@ -231,14 +230,6 @@
               <i class="icofont-users-alt-5"></i>
               <span data-toggle="counter-up">6</span>
               <p>Projetos</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">6</span>
-              <p>Projetos Pessoais</p>
             </div>
           </div>
 
@@ -490,34 +481,31 @@
         </div>
 
 
-        <div>
-          <form action="https://formspree.io/f/xqkjlvdr" method="POST">
-            <h4 class=" mb-3 email">Email:</h4>
-            <div>
-              <input class="inputsEmail" type="email" name="email">
-            </div>
-            <h4 class="mt-3 mb-3 mensagem">Mensagem:</h4>
-            <div>
-              <textarea id="textarea" class="inputsEmail" name="message"></textarea>
-            </div>
-            <div>
-              <button id="botaoSend" class="botaoEmail">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
-                </svg>
-                <div class="wrapper">
-                  <i class="bi bi-send"></i>
-                  <span id="spanButton">Enviar</span>
-                </div>
-              </button>
-            </div>
-          </form>
-        </div>
 
+        <form action="https://api.staticforms.xyz/submit" method="post" class="pb-2">
+          <input type="hidden" name="accessKey" value="bda3d26e-bc25-48a0-825e-73091cb647f6">
+          <h4 class="email">Email:</h4>
+          <div>
+            <input type="text" name="email" class="mb-3 inputsEmail">
+          </div>
+          <h4 class="email mensagem">Mensagem:</h4>
+          <div>
+            <textarea name="message" id="textarea" class="inputsEmail"></textarea>
+          </div>
 
-
+          <input type="hidden" name="redirectTo" value="https://aguiarprogrammer.vercel.app">
+          <button id="botaoSend" class="botaoEmail">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
+              viewBox="0 0 16 16">
+              <path
+                d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
+            </svg>
+            <div class="wrapper">
+              <i class="bi bi-send"></i>
+              <span id="spanButton">Enviar</span>
+            </div>
+          </button>
+        </form>
         <div class="row mt-1">
 
           <div class="col-lg-12">
@@ -565,11 +553,11 @@
           </div>
           <div class="boton">
             <div class="icono">
-              <a href="https://github.com/Marco-Aguiar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
-                viewBox="0 0 16 16">
-                <path
-                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-              </svg></a>
+              <a href="https://github.com/Marco-Aguiar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                  fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                </svg></a>
             </div>
             <span>Github</span>
           </div>
