Updating email form

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
 
 
-        <form action="https://api.staticforms.xyz/submit" method="post" class="pb-2">
+        <form method="post" class="pb-1">
           <input type="hidden" name="accessKey" value="bda3d26e-bc25-48a0-825e-73091cb647f6">
           <h4 class="email">Email:</h4>
           <div>
@@ -494,7 +494,7 @@
           </div>
 
           <input type="hidden" name="redirectTo" value="https://aguiarprogrammer.vercel.app">
-          <button id="botaoSend" class="botaoEmail">
+          <button formaction="https://api.staticforms.xyz/submit" id="botaoSend" class="botaoEmail" style="display: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
               viewBox="0 0 16 16">
               <path
@@ -506,6 +506,21 @@
             </div>
           </button>
         </form>
+        <button id="botaoEmail" class="botaoEmail">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
+            viewBox="0 0 16 16">
+            <path
+              d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
+          </svg>
+          <div class="wrapper">
+            <i class="bi bi-send"></i>
+            <span id="spanButton">Enviar</span>
+          </div>
+        </button>
+        <dialog>
+          <h4>Mensagem enviada com sucesso!</h4>
+          <h5>Redirecionando...</h5>
+        </dialog>
         <div class="row mt-1">
 
           <div class="col-lg-12">
