--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1</span>
-              <p>Organizações</p>
+              <span data-toggle="counter-up">6</span>
+              <p>Projetos</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">6</span>
-              <p>Projetos</p>
+              <span data-toggle="counter-up">1</span>
+              <p>Organizações</p>
             </div>
           </div>
 
@@ -283,8 +283,9 @@
             <div class="resume-item">
               <h4>Ajudante Eletricista</h4>
               <h5> Aug 2020 - Maio 2021</h5>
+              <p><em>Presencial</em></p>
               <ul>
-                <li>Iniciei trabalhando no metrô de SP, aprendendo circuitos elétricos e mexendo com aparelhos e fiações
+                <li>Iniciei trabalhando no metrô de São Paulo, aprendendo circuitos elétricos e mexendo com aparelhos e fiações
                   elétricas</li>
                 <li>Aprendi muito sobre equipamentos e projetos.</li>
               </ul>
@@ -292,7 +293,7 @@
             <div class="resume-item">
               <h4>Estágiario Desenvolvedor Back-end</h4>
               <h5>Julho 2021 - Dezembro 2022</h5>
-              <p><em>Online </em></p>
+              <p><em>Home Office </em></p>
               <ul>
                 <li>Como primeira tarefa prática, desenvolvi um sistema a fim de facilitar o gerenciamento sobre as
                   próximas formações</li>
@@ -306,7 +307,7 @@
               <h5 id="atual">Cargo Atual</h5>
               <br>
               <h5>Dezembro 2022 - Presente</h5>
-              <p><em>Online </em></p>
+              <p><em>Home Office</em></p>
             </div>
           </div>
         </div>
@@ -450,7 +451,7 @@
             <a href="https://www.linkedin.com/in/anadavid/"><img src="assets/img/testimonials/cris.jpeg"
                 class="testimonial-img" alt=""></a>
             <h3>Ana David</h3>
-            <h4> Partner Enablement Manager</h4>
+            <h4> Partner Enablement Manager in Amazon</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Marco Aguiar é uma pessoa muito dedicada e comunicativa.
