--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
               <span data-toggle="counter-up">1</span>
-              <p>Estágios</p>
+              <p>Estágios feitos</p>
             </div>
           </div>
 
@@ -220,8 +220,8 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">6</span>
-              <p>Projetos</p>
+              <span data-toggle="counter-up">7</span>
+              <p>Projetos realizados</p>
             </div>
           </div>
 
