Adicionando projetos e currículo

--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val"></i></span>
+              <span class="skill">Java <i class="val"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -145,15 +153,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val"></i></span>
+              <span class="skill">Angular <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -165,17 +165,17 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Java <i class="val"></i></span>
+              <span class="skill">VueJs <i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">React <i class="val"></i></span>
+              <span class="skill">SQL/ORACLE<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -285,7 +285,8 @@
               <h5> Aug 2020 - Maio 2021</h5>
               <p><em>Presencial</em></p>
               <ul>
-                <li>Iniciei trabalhando no metrô de São Paulo, aprendendo circuitos elétricos e mexendo com aparelhos e fiações
+                <li>Iniciei trabalhando no metrô de São Paulo, aprendendo circuitos elétricos e mexendo com aparelhos e
+                  fiações
                   elétricas</li>
                 <li>Aprendi muito sobre equipamentos e projetos.</li>
               </ul>
@@ -426,6 +427,99 @@
 
       </div>
     </section>
+
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Projetos Pessoais</h2>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="200">
+            <div class="icon-box iconbox-orange ">
+              <div>
+                <img src="../portifolio/assets/img/projetoVitalPulse.png" style="width: 100%;" alt="Projeto VitalPulse">
+              </div>
+              <h4><a href="">VitalPulse</a></h4>
+              <p>projeto back end
+                com a finalidade de desenvolver
+                minhas skills em API's REST e
+                Spring Boot. Envolvendo
+                conhecimentos sobre
+                autenticação, autorização, banco
+                de dados, etc.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="100">
+            <div class="icon-box">
+              <div>
+                <img src="../portifolio/assets/img/projetoWoodyBurger.png" style="width: 100%; height: auto;"
+                  alt="Projeto Woody Burger">
+              </div>
+              <h4><a href="">Woody Burger</a></h4>
+              <p>projeto focado
+                em conhecimentos Front-end,
+                envolvendo noções de VueJs,
+                Banco de dados em formato JSON.
+                Um sistema direcionado para
+                funcionários visualizarem,
+                cadastrarem e administrarem
+                pedidos.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="200">
+            <div class="icon-box iconbox-red">
+              <div>
+                <div>
+                  <img src="../portifolio/assets/img/Alura-Space.png" style="width: 100%; height: auto;"
+                    alt="Projeto Alura-Space">
+                </div>
+              </div>
+              <h4><a href="">Alura-Space</a></h4>
+              <p>Curso finalizado gerenciado pela alura, envolvendo conhecimentos de python e django, com enfâse em
+                sistema web.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box iconbox-pink">
+              <div>
+                <div>
+                  <img src="../portifolio/assets/img/Credit-Card.png" style="width: 100%; height: auto;"
+                    alt="Projeto Credit-Card">
+                </div>
+              </div>
+              <h4><a href="">Credit-Card</a></h4>
+              <p>O Credit-Card é um componente que simula o formulário de preenchimento de cartão de crédito em
+                aplicações web, onde é possível adicionar máscara aos inputs e atualizar elementos HTML via DOM.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-blue">
+              <div>
+                <div>
+                  <img src="../portifolio/assets/img/soon.png" style="width: 50%; height: auto;" alt="Futuros projetos">
+                </div>
+              </div>
+              <h4><a href="">Em breve mais projetos estarão aqui...</a></h4>
+              <p></p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -497,7 +591,8 @@
           </div>
 
           <input type="hidden" name="redirectTo" value="https://aguiarprogrammer.vercel.app">
-          <button formaction="https://api.staticforms.xyz/submit" id="botaoSend" class="botaoEmail" style="display: none;">
+          <button formaction="https://api.staticforms.xyz/submit" id="botaoSend" class="botaoEmail"
+            style="display: none;">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
               viewBox="0 0 16 16">
               <path
@@ -509,17 +604,28 @@
             </div>
           </button>
         </form>
-        <button id="botaoEmail" class="botaoEmail">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
-            viewBox="0 0 16 16">
-            <path
-              d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
-          </svg>
-          <div class="wrapper">
-            <i class="bi bi-send"></i>
-            <span id="spanButton">Enviar</span>
+        <div class="row mt-4">
+          <div>
+            <button id="botaoEmail" class="botaoEmail">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send"
+                viewBox="0 0 16 16">
+                <path
+                  d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z" />
+              </svg>
+              <div class="wrapper">
+                <i class="bi bi-send"></i>
+                <span id="spanButton">Enviar</span>
+              </div>
+            </button>
           </div>
-        </button>
+
+          <div class="ml-4 col-lg-3" style="width: 100%; height: 20px;">
+            <a href="./Marco-Aguiar_CV.pdf" download="Marco-Aguiar_CV">
+              <button class="botaoEmail">Baixar Currículo</button>
+            </a>
+          </div>
+        </div>
+
         <dialog>
           <h4>Mensagem enviada com sucesso!</h4>
           <h5>Redirecionando...</h5>
