--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="icon-box iconbox-pink">
               <div>
                 <div>
-                  <img src="../portifolio/assets/img/Credit-Card.png" style="width: 100%; height: auto;"
+                  <img src="./assets/img/Credit-Card.png" style="width: 100%; height: auto;"
                     alt="Projeto Credit-Card">
                 </div>
               </div>
